# SearchSystem

./: .gitignore  CMakeLists.txt  CodeStyle.clang-format  README.md  config-example.ini  config.ini
Core/: CMakeLists.txt
Core/Application/UseCases/: IndexPageUseCase.cpp  IndexPageUseCase.h  SearchDocumentsUseCase.cpp  SearchDocumentsUseCase.h
Core/DTO/: CrawlResultDTO.h  SearchRequestDTO.h  SearchResponseDTO.h
Core/Domain/Model/: Document.cpp  Document.h  SearchResult.cpp  SearchResult.h  Word.cpp  Word.h  WordFrequency.cpp  WordFrequency.h
Core/Domain/Service/: IndexingService.cpp  IndexingService.h  RankingService.cpp  RankingService.h
Core/Domain/ValueObject/: SearchQuery.cpp  SearchQuery.h  Url.cpp  Url.h
Core/Ports/: IConfiguration.h  IDatabaseConnection.h  IDocumentRepository.h  IHtmlParser.h  IHttpClient.h  IHttpServer.h  ITextProcessor.h  IWordRepository.h
HTTPServer/: CMakeLists.txt  main.cpp
HTTPServerData/: CMakeLists.txt  DIContainer.cpp  DIContainer.h
Infrastructure/: CMakeLists.txt
Infrastructure/Configuration/: IniConfiguration.cpp  IniConfiguration.h
Infrastructure/Database/: DatabaseConnection.cpp  DatabaseConnection.h  PostgresDocumentRepository.cpp  PostgresDocumentRepository.h  PostgresWordRepository.cpp  PostgresWordRepository.h
Infrastructure/Http/: BoostBeastHttpClient.cpp  BoostBeastHttpClient.h  BoostBeastHttpServer.cpp  BoostBeastHttpServer.h
Infrastructure/Parsers/: HtmlParser.cpp  HtmlParser.h
Infrastructure/Text/: BoostLocaleTextProcessor.cpp  BoostLocaleTextProcessor.h
Spider/: CMakeLists.txt  main.cpp
SpiderData/: CMakeLists.txt  DIContainer.cpp  DIContainer.h
